2006-04-07  Alan Coopersmith  <alan.coopersmith@sun.com>

	* session.c: 
	Xorg bug #4765 <https://bugs.freedesktop.org/show_bug.cgi?id=4765>
	Patch #3555 <https://bugs.freedesktop.org/attachment.cgi?id=3555>
	xdm doesn't work with the pam_krb5 module (call pam_getenvlist
	after pam_setcred)  (Constantine Sapuntzakis)

2006-03-30  Alan Coopersmith  <alan.coopersmith@sun.com>

	* configure.ac:
	Version bump: 1.0.3

2006-03-30  Alan Coopersmith  <alan.coopersmith@sun.com>
	
	* daemon.c:
	* util.c:
	Drop all setpgrp/setpgid silliness and just use setsid everywhere.
	(Assumes all platforms are at least POSIX.1-1990 compliant.)

	* daemon.c:
	Check for error return from daemon() function.

2006-03-27  Alan Coopersmith  <alan.coopersmith@sun.com>

	* configure.ac: 
	Version bump: 1.0.2

2006-03-17  Alan Coopersmith  <alan.coopersmith@sun.com>

	* configure.ac:
	* config/Xsession.cpp: 
	* config/Makefile.am:
	Bug #5898 <https://bugs.freedesktop.org/show_bug.cgi?id=5898>
	Use mktemp command to create files safely in TMPDIR or /tmp
	on systems that have it - don't try to create files there if
	mktemp is not present.   Fix based on NetBSD fix from
	<http://www.netbsd.org/cgi-bin/query-pr-single.pl?number=32805> .

2006-03-16  Jeremy C. Reed  <reed@reedmedia.net>

	reviewed by: Alan Coopersmith

	* configure.ac:
	DragonFly is a BSD, so is CSRG_BASED and use su with -m option.

2006-03-16  Alan Coopersmith  <alan.coopersmith@sun.com>

	* configure.ac: 
	* daemon.c:
	* session.c:
	* util.c:
	Convert checks for <grp.h>, daemon(), and setpgrp arguments to
	autoconf tests instead of checking OS name #ifdefs.

2006-03-10  Alan Coopersmith  <alan.coopersmith@sun.com>

	* chooser.c: 
	Coverity ids #722, 723, 724, 725, 726, 727, 728:
	Need to XtFree the values returned by XawListShowCurrent to plug
	memory leaks.

	* socket.c (UpdateMcastGroup): 
	Coverity id #834:  
	After joining a multicast group, add group pointer to the list of